--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <link rel="stylesheet" href="./styles/style.css" />
+</head>
+
+<body>
+    <div id="containerParent">
+        <div></div> <span>
+            <img id="phones" src="../lab-css-instagram-clone/images/phones.png" />
+            </span>
+        <div id="logo-instagram"></div>
+        <img src="../lab-css-instagram-clone/images/brand.png">
+        <button id="button">
+        <img src="../lab-css-instagram-clone/images/home.png" />
+        <p id="login">Log in</p>
+        </button>
+    </div>
+    <div id="container-text"></div>
+    <h2 id="h2">Capture and Share the World's Moments
+        <p id="p">Instagram is a <strong>fast, beautiful and fun way</strong> to share your life<br> with friends and family.
+            <br>Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram &mdash; it 's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.<br> Oh yeah,
+            did we mention it 's free?</p>
+        </div>
+        <div id="container-app">
+            <img class="button-app" src="../lab-css-instagram-clone/images/badge-iphone.png" />
+            <img class="button-app" src="../lab-css-instagram-clone/images/badge-android.png" />
+        </div>
+</body>
+<footer class="footer">
+    <p>
+        <strong>ABOUT US SUPPORT BLOG PRESS API JOBS PRIVACY TERMS</strong>
+        <span id="footer-final"> &copy; 2014 Instagram</span></p>
+
+</footer>
+
 </html>
