--- a/index.html
+++ b/index.html
@@ -4,28 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <link href="styles/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    <section>
-    <figure>
-      <img src= "./images/phones.png">
-    </figure>
-    <figure>
-      <img src = "./images/brand.png">
-    </figure>
-    <div>
-      <button type="submit"><img src = ".images/home></button>
-      <">
+    <section class="background">
+      <figure>  
+        <img src= "./images/phones.png">
+      </figure>
+      <div>
+      <div class="instalog">
+        <div class = "instagram">
+          <img src = "./images/brand.png">
+        </div>
+        <div class="botao">
+          <button type="submit"><img src = "./images/home.png"><b>Log in</b></button>
+        </div>
+        </div>
+      <article class="text">
+        <h2>
+          Capture and Share the World's Moments
+        </h2>
+        <p>
+          Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram — it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+           Oh yeah, did we mention it's free?
+        </p>
+      </article>
+      <div class="badge">
+      <img src = "./images/badge-iphone.png">
+      <img src = "./images/badge-android.png">
     </div>
-    <div>
-      Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-      friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-      Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-      Jobs Privacy Terms &copy; 2014 Instagram
     </div>
     </section>
-
+    <footer>
+      <nav class="rodape">
+        <ul>
+          <li>About us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</a></li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li class="insta">2014 Instagram</li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
