Finalizando lab - ajustes no botão, footer e posição geral

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-  
 
   <head>
     <meta charset="UTF-8" />
@@ -9,10 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   
-  
   <body>
-
-    
     
     <section>
       <img src="images/phones.png">
@@ -22,9 +18,8 @@
         <div id="brand-home">
           <img src ="images/brand.png">
           <span>
-            <img src ="images/home.png">
-            <button>Log in</button>
-        </span>
+            <button><img src="images/home.png">  Log in </button>
+          </span>
         </div>
 
         <div id="background-text">
@@ -57,10 +52,10 @@
         <a href="*">JOBS</a>
         <a href="*">PRIVACY</a>
         <a href="*">TERMS</a>
+        &copy 2014 INSTAGRAM
       </ul>
     </footer>
    
   </body>
-
 
   </html>
