Atualizado com as alterações do Vini e uma pequena mexida no style dos links da minha parte no final - done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <div class="blue-body"></div>
@@ -12,31 +12,56 @@
       <img src="./images/phones.png" alt="" class="phones" />
       <div class="main">
         <div class="log-div">
-          <img src="images/brand.png" />
-          <img src="images/home.png" class="home-btn" />
+          <img src="images/brand.png" class="instagram-image" />
+          <button type="" class="btn">
+            <img src="images/home.png" class="home-btn" />
+            <span>
+              <b>Log in</b>
+            </span>
+          </button>
         </div>
         <div class="frame-container">
-          <h2>Capture and Share the World's Moments</h2>
+          <h2>Capture and Share<br />the World's Moments</h2>
+
           <div>
-            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to
-            share your life with friends and family. Take a picture or video,
-            choose a filter to transform its look and feel, then post to
-            Instagram &mdash; it's that easy. You can even share to Facebook,
-            Twitter, Tumblr and more. It's a new way to see the world. Oh yeah,
-            did we mention it's free? Download on the App Store Get it on Google
-            Play
+            <p>
+              Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to
+              share your <br />life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look
+              <br />and feel, then post to Instagram &mdash; it's that easy. You
+              can <br />even share to Facebook, Twitter, Tumblr and more. It's a
+              <br />new way to see the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
           </div>
         </div>
-        <div>
-          <img src="./images/badge-iphone.png" />
-          <img src="images/badge-android.png" />
+        <div class="downloads">
+          <a href="app-store.html">
+            <img src="./images/badge-iphone.png" />
+          </a>
+          <a href="google-play.html">
+            <img src="images/badge-android.png" />
+          </a>
         </div>
       </div>
     </div>
 
     <img src="./images/bgtile.png" />
-    <div>
-      About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
-    </div>
+
+    <footer>
+      <div>
+        <a href="about.html">ABOUT US</a>
+        <a href="support.html">SUPPORT</a>
+        <a href="blog.html">BLOG</a>
+        <a href="press.html">PRESS</a>
+        <a href="api.html">API</a>
+        <a href="jobes.html">JOBS</a>
+        <a href="privacy">PRIVACY</a>
+        <a href="terms.html">TERMS</a>
+        <span>&copy; 2014 INSTAGRAM</span>
+      </div>
+    </footer>
   </body>
 </html>
