--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
     <footer>
       <nav class="rodape">
         <ul>
-          <li>About us</li>
-          <li>Support</li>
-          <li>Blog</li>
-          <li>Press</li>
-          <li>API</a></li>
-          <li>Jobs</li>
-          <li>Privacy</li>
-          <li>Terms</li>
+          <li><a href="#">About us</a></li><a href="#"></a>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
           <li class="insta">2014 Instagram</li>
         </ul>
       </nav>
