--- a/index.html
+++ b/index.html
@@ -5,12 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" type="text/css" href="styles/style.css"/>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+<!-- Introduction-->
+<div class="header"></div>
+    <div class="intro">
+      <img class="phones" src="./images/phones.png" alt="phones" />
+      <div class="intro-items">
+        <div class="login">
+          <img src="images/brand.png"/>
+
+          <button class="click"><img src="images/home.png"/>
+            <span> <b>Log in</b> </span>
+          </button>
+          
+        </div>
+
+  <div class="message">
+  <h2>Capture and Share<br/>the World's Moments</h2>
+
+      <div>
+            <p> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You
+              can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+
+   </div>
+      <div class="icons">
+        <a class="icon1" href="app-store.html"><img src="./images/badge-iphone.png" alt="Dowload on the app store"/></a>
+        <a href="google-play.html"><img src="images/badge-android.png" alt="Get in On Google play"/></a>
+      </div>
+
+      </div>
+    </div>
+
+    <img src="./images/bgtile.png" />
+
+  <!--Footer -->
+  <section>
+  <footer>
+    <a href="">ABOUT US</a> 
+    <a href="">SUPPORT</a> 
+    <a href="">BLOG</a> 
+    <a href="">PRESS</a> 
+    <a href="">API</a>
+    <a href="">JOBS</a> 
+    <a href="">PRIVACY</a> 
+    <a href="">TERMS</a>
+    <a class="gray">&copy; 2014 Instagram</a>
+  </footer>
+  </section>
   </body>
 </html>
