--- a/index.html
+++ b/index.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css" </link>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+<div id="wrap-around"> 
+
+    <div id="container-left"> <img src="images/phones.png"> </div>
+
+<div id="container-right"> 
+
+<div id="header"> 
+  <div class="image-instagram"> <img src="images/brand.png" </div>
+  <button class="button-one"> <img src="images/home.png"> Login </button>
+</div>
+
+<div class="text">
+ <h1> Capture the moment</h1>
+  <p> sdjbfksbdvjshbdvsdbksdfksjdhfkshdfksdf</p>
+</div>
+
+<div class="app-store">
+  <img src="images/badge-iphone.png"> <img src="images/badge-android.png">
+</div>
+
+</div>
+
+</div>
+
+<div id="footer">
+  <ul class= "nav-bar-footer"> 
+    <li> <a href="">  ABOUT US </a> </li>
+    <li> <a href="">  SUPPORT </a> </li>
+    <li> <a href="">  BLOG </a></li>
+    <li> <a href="">  PRESS </a> </li>
+    <li> <a href="">  API </a> </li>
+    <li> <a href="">  JOBS </a> </li>
+    <li> <a href="">  PRIVACY </a> </li>
+    <li> <a href="">  TERMS </a> </li>
+    <li> &copy; 2014 Instagram  </li>
+  </ul>
+</div>
+
+
+
   </body>
 </html>
