add styles and all structure

--- a/index.html
+++ b/index.html
@@ -9,23 +9,49 @@
   </head>
   <body>
     <section>
-      <div class="blue">
 
+      <div id="phones">
+        <img src="./images/phones.png" alt="two phones">
       </div>
 
-      <div class="white">
-        
+      <div id="main">
+        <div id="home">
+        <img src="./images/brand.png" alt="instagram logo" id="logo">
+        <button id="login">
+          <img src="./images/home.png" alt="home" id="button">Log in</button>
+        </div>
+
+        <div id="info">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a fast, beautiful and fun way to share your life with
+            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Oh yeah, did we mention it's free? </p>
+
+            <aside>
+              <link rel="stylesheet" href="" id="apple">Download on the App Store 
+              <link rel="stylesheet" href="" id="google">Get it on Google Play 
+            </aside>
+        </div>
       </div>
-
-
-
-
-
     </section>
 
     <footer>
-      About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+      <nav>
+        <ul>
+          <li> ABOUT US </li>
+          <li> SUPPORT </li>
+          <li> BLOG </li>
+          <li> PRESS </li>
+          <li> API </li>
+          <li> JOBS </li>
+          <li> PRIVACY </li>
+          <li> TERMS </li>
+        </ul>
+      </nav>
+      <span> 
+       &copy; 2014 Instagram
+      </span>
     </footer>
 
 
@@ -33,9 +59,6 @@
 
 
 
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play 
+   
   </body>
 </html>
