--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel='stylesheet' href='./styles/style.css'>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="background"></div>
+    <div id="main-container">
+      <img id="phones" src="./images/phones.png" alt="Image of two smartphones">
+      <div id="main-content">
+        <header>
+          <img src="./images/brand.png" alt="instagram logo">
+          <a href="#">
+            <div id="login-button">
+              <img src="./images/home.png">
+              Log in
+            </div>
+          </a>
+          
+        </header>
+        <article>
+          <h2>Capture and Share <br> 
+            the World's Moments</h2>
+          <p>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family. <br><br>
+
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br><br>
+
+            Oh yeah, did we mention it's free?
+          </p>
+          <div id="download">
+            <a href="#">
+              <img src="./images/badge-iphone.png" alt="Download on the App Store">
+            </a>
+            <a href="#">
+              <img src="./images/badge-android.png" alt="Get it on Google Play">
+            </a>
+          </div>
+        </article>
+      </div>
+    </div>
+    <footer>
+      <ul id="footer-nav">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+      <div id="copyright">&copy; 2014 Instagram</div>
+    </footer>
+  
   </body>
 </html>
