--- a/index.html
+++ b/index.html
@@ -4,13 +4,69 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+    <header>
+    </header>
+    <section class="gray-bg">
+
+    </section>
+    <main>
+      <section class="container">
+        <section>
+          <img src="images/phones.png">
+        </section>
+        <section>
+          <section>
+            <img src="images/brand.png">
+            <img src="images/home.png">
+          </section>  
+          <section class="white-bg">
+            <h1>
+              Capture and Share <br>
+              the World's Moments
+            </h1>
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life<br> 
+              with friends and family. 
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look <br>
+              and feel, then post to Instagram &mdash; it's that easy. You can even <br> 
+              share to Facebook, Twitter, Tumblr and more. It's a <br>
+              new way to see the world.
+            </p>  
+            <p>
+              Oh yeah, did we mention it's free?
+            </p>   
+          </section>
+          <section>
+            <img src="images/badge-iphone.png">
+            <img src ="images/badge-android.png">
+          </section>
+        </section>  
+      </section>
+    </main>
+    <footer class="list-links">
+      <ul>
+        <li><a href=#>About us</a></li>
+        <li><a href=#>Support</a></li>
+        <li><a href=#>Blog</a></li>
+        <li><a href=#>Press</a></li>
+        <li><a href=#>API</a></li>
+        <li><a href=#>Press</a></li>
+        <li><a href=#>Jobs</a></li>
+        <li><a href=#>Privacy</a></li>
+        <li><a href=#>Terms</a></li>
+        <li id="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+    <!-- Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Jobs Privacy Terms &copy; 2014 Instagram -->
   </body>
 </html>
