completando o clone da landing page do instagram

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <img src="images/phones.png">
         </section>
         <section>
-          <section>
+          <section class="container-logo">
             <img src="images/brand.png">
-            <img src="images/home.png">
+            <input type="button" value="Log in" class="button-login" />
           </section>  
           <section class="white-bg">
             <h1>
@@ -28,7 +28,7 @@
               the World's Moments
             </h1>
             <p>
-              Instagram is a fast, beautiful and fun way to share your life<br> 
+              Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life<br> 
               with friends and family. 
             </p>
             <p>
@@ -41,7 +41,7 @@
               Oh yeah, did we mention it's free?
             </p>   
           </section>
-          <section>
+          <section class="apps">
             <img src="images/badge-iphone.png">
             <img src ="images/badge-android.png">
           </section>
