--- a/index.html
+++ b/index.html
@@ -3,14 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section id="container">
+      <div><img src="images/phones.png" alt="phones" /></div>
+      <div id="right-section">
+        <div id="instagram">
+          <img src="images/brand.png" alt="instagram" /><a href=""
+            ><img src="images/home.png" alt="log in" /> Log in</a
+          >
+        </div>
+        <article>
+          <h1>Instagram Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share
+            your life with friends and family.<br /><br />
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.<br /><br />
+            Oh yeah, did we mention it's free? Download on the App Store Get it
+            on Google Play
+          </p>
+          <div id="buttons">
+            <a href=""><img src="images/badge-iphone.png" alt="iOs" /></a
+            ><a href=""><img src="images/badge-android.png" alt="Android" /></a>
+          </div>
+        </article>
+      </div>
+    </section>
+    <footer>
+      <div>
+        <a href="">About Us</a> <a href="">Support</a> <a href="">Blog</a>
+        <a href="">Press</a> <a href="">API</a> <a href="">Jobs</a>
+        <a href="">Privacy</a> <a href="">Terms</a>
+        <b>&copy; 2014 Instagram</b>
+      </div>
+    </footer>
   </body>
 </html>
