--- a/index.html
+++ b/index.html
@@ -5,12 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+    <section>
+      <img src="./images/phones.png" alt="Instagram in phones">
+      <article>
+        <img src="./images/brand.png" alt="Instagram logo"><a href="#"><img src="./images/home.png" alt="Log in"> Log in</a>
+      </article>
+      <article>
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+    friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>  
+    <img src="./images/badge-iphone.png" alt="Download from App store"><img src="./images/badge-android.png" alt="Download from Google play">  
+  </article>
+    </section>
+    </main>
+
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="#" target="_blank" rel="noopener noreferrer">About Us</a></li>
+          <li><a href="#" target="_blank" rel="noopener noreferrer">Support</a></li>
+          <li><a href="#" target="_blank" rel="noopener noreferrer">Blog</a></li>
+          <li><a href="#" target="_blank" rel="noopener noreferrer">Press</a></li>
+          <li><a href="#" target="_blank" rel="noopener noreferrer">API</a></li>
+          <li><a href="#" target="_blank" rel="noopener noreferrer">Terms</a></li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </nav>       
+    </footer>
+
   </body>
 </html>
