--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="centered">
+    <div class="container">
+      <div class="smartphone-image">
+        <img alt="" src="images/phones.png" />
+      </div>
+      <div class="intro-section">
+        <div class="intro-header">
+          <div class="logo"><img src="images/brand.png" alt="Instagram" /></div>
+          <div class="login button"><a href="#"><img class="home" src="images/home.png" alt="Log in" />Log in</a></div>
+        </div>
+        <div class="intro">
+          <img class="intro-bg" src="images/frame.png" alt="" />
+          <div class="intro-inner">
+            <h2 class="subtitle">Capture and Share the World's Moments</h2>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="download-links">
+              <a class="download" href="#"><img class="download-iphone" src="images/badge-iphone.png" alt="Download on the App Store" /></a>
+              <a class="download" href="#"><img class="download-android" src="images/badge-android.png" alt="Get it on Google Play" /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer container">
+      <ul class="footer-menu">
+        <li class="menu-item"><a href="#">About Us</a></li>
+        <li class="menu-item"><a href="#">Support</a></li>
+        <li class="menu-item"><a href="#">Blog</a></li>
+        <li class="menu-item"><a href="#">Press</a></li>
+        <li class="menu-item"><a href="#">API</a></li>
+        <li class="menu-item"><a href="#">Jobs</a></li>
+        <li class="menu-item"><a href="#">Privacy</a></li>
+        <li class="menu-item"><a href="#">Terms</a></li>
+        <li class="menu-item copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+    </div>
   </body>
 </html>
