--- a/index.html
+++ b/index.html
@@ -4,13 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="background"></div>
+
+    <main>
+      <img class="main-img" src="images/phones.png" alt="phones" />
+      <section class="main-block">
+        <header>
+          <img src="images/brand.png" alt="instagram logo" />
+          <button class="header-btn">
+            <img src="images/home.png" alt="home logo" />
+            <p>Log in</p>
+          </button>
+        </header>
+
+        <section id="insta-info">
+          <div class="text-container">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>
+              Instagram is a <span>fast</span>, <span>beautiful</span> and
+              <span>fun</span> way to share your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram - it's that easy. You can even share
+              to Facebook, Twitter, Tumblr and more. It's a new way to see the
+              world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+
+          <div class="download-btn">
+            <img
+              src="images/badge-iphone.png"
+              alt="download button Apple Store"
+            />
+            <img
+              src="images/badge-android.png"
+              alt="download button Google Store"
+            />
+          </div>
+        </section>
+      </section>
+    </main>
+
+    <footer>
+      <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+      </ul>
+      <p>®2014 Instagram</p>
+    </footer>
   </body>
 </html>
