--- a/index.html
+++ b/index.html
@@ -8,42 +8,45 @@
   <link rel="stylesheet" href="./styles/style.css" </head>
 
 <body>
+  <header></header>
   <div class="flex-container">
     <aside>
       <img src="./images/phones.png" alt="phones">
     </aside>
     <div id="main-content">
-      <header>
+      <div id="main-top">
         <img src="./images/brand.png" alt="">
-        <button>Log in</button>
-      </header>
+        <button><img src="./images/home.png" alt="">Log in</button>
+      </div>
       <main>
         <h2>Capture and Share the World's Moments</h2>
         <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
           life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to
-          Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to
+          Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way
+          to
           see the world.
         </p>
         <p>Oh yeah, did we mention it's free?</p>
+
         <div id="download">
           <a href=""><img src="./images/badge-iphone.png" alt=""></a>
-          <a href=""><img src="./images/badge-android.png" alt=""></a>
+          <a id="google-play" href=""><img src="./images/badge-android.png" alt=""></a>
         </div>
       </main>
     </div>
   </div>
   <footer>
     <ul>
-      <li>Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
+      <li>ABOUT US</li>
+      <li>SUPPORT</li>
+      <li>BLOG</li>
+      <li>PRESS</li>
       <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
-      <li>&copy; 2014 Instagram</li>
+      <li>JOBS</li>
+      <li>PRIVACY</li>
+      <li>TERMS</li>
+      <li>&copy; 2014 INSTAGRAM</li>
     </ul>
   </footer>
 </body>
