--- a/index.html
+++ b/index.html
@@ -5,12 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="../styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="container">
+      <div class="container_login">
+     <img class="phones" src="../images/phones.png" alt="phones with picture open">
+     <img class="insta_logo" src="../images/brand.png" alt="">
+     <button class="btn"><span class="icon"></span> Log in </button>
+    </div> 
+
+   <div class="white_square">
+     <h2>Capture and Share the World's Moments</h2>
+     <p>
+      Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. <br> 
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
+      Oh yeah, did we mention it's free?
+     </p>
+     <img src="../images/badge-iphone.png" alt="apple store button">
+     <img src="../images/badge-android.png" alt="google play button">
+   </div>
+
+   <div class="links">
+       <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li>&copy; 2014 Instagram</li>
+       </ul>
+   </div>
+    </div>
+   
+
+
+
   </body>
 </html>
