--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <div class="bg"></div>
+  <div class="bg2"></div>
+  <div class="center">
+    <article>
+      <div class="img">
+        <img src="./images/phones.png" alt="Phone images">
+      </div>
+      <div class="sideR">
+        <div class="top">
+          <img src="./images/brand.png" alt="Instagram logo">
+          <a href="#" class="btn"><img src="./images/home.png" alt="Home img"> Log in</a>
+        </div>
+        <div class="art">
+          <h1>Capture and Share<br> the World's Moments</h1>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+            life with
+            friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's
+            that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="links">
+            <a href="#"><img src="./images/badge-iphone.png" alt="Download on the App Store"></a>
+            <a href="#"><img src="./images/badge-android.png" alt="Get it on Google Play"></a>
+          </div>
+        </div>
+      </div>
+    </article>
+    <footer>
+      <nav>
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+      </nav>
+      <p>&copy; 2014 Instagram</p>
+    </footer>
+  </div>
+</body>
+
 </html>
