--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <article>
           <h1>Capture and Share <br> the World's Moments</h1>
           <p>
-            Instagram is a fast, beautiful and fun way to share your life with
+            Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with
             friends and family. <br>
           </p>
           <p>
