--- a/index.html
+++ b/index.html
@@ -1,16 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+
+</head>
+
+<body>
+  <main>
+
+    <header class="background-blue">
+
+      <img src="/images/brand.png" alt="Instagram brand-logo">
+      <div class="logIn background-blue">
+        <img src="/images/home.png" alt="Log in logo"><a href="#">Log in</a>
+      </div>
+
+    </header>
+
+    <div class="container">
+
+      <section>
+        <img src="/images/phones.png" alt="two phones">
+      </section>
+
+      <section>
+
+        <div class="backgroundcolor-info">
+          <h1>Instagram Capture and Share the World's Moments</h1>
+
+          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends
+            and
+            family.</p>
+
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+          <p>Oh yeah, did we mention it's free?</p>
+
+          <img src="/images/badge-iphone.png" alt="Download on the App Store button"><a href="#" target="_blank"></a>
+
+          <img src="/images/badge-android.png" alt="Get it on Google Play button"><a href="#" target="_blank"></a>
+        </div>
+
+      </section>
+    </div>
+
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Support</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Press</a></li>
+          <li><a href="">API</a></li>
+          <li><a href="">Jobs</a></li>
+          <li><a href="">Privacy</a></li>
+          <li><a href="">Terms</a></li>
+        </ul>
+        <span>&copy; 2014 Instagram</span>
+      </nav>
+    </footer>
+  </main>
+</body>
+
 </html>
