--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </article>
       <article>
         <nav class="login">
-          <img src="./images/brand.png" alt="">
+          <img src="./images/brand.png" alt="Instagram brand">
           <a href="#"><img src="./images/home.png" alt="home">Log in</a>
         </nav>
         <div class="text-img">
