add  html and css structures

--- a/index.html
+++ b/index.html
@@ -1,16 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+  <header>
+  </header>
+  <main>
+    <div id="structure">
+
+      <section>
+        <img src="images/phones.png" alt="two smartphones">
+      </section>
+
+      <section>
+        <div id="header">
+          <img src="images/brand.png" alt="instagram logo">
+
+          <nav class="login-button">
+            <img src="images/home.png" alt="house icon">
+            <a href="#">Log in</a>
+          </nav>
+        </div>
+
+        <article class="container">
+
+          <img src="images/frame.png" alt="white frame">
+          <div class="content">
+            <h1>Capture and Share<br>
+              the World's Moments</h1>
+            <p> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+              friends and family. </p>
+            <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world. </p>
+            <p> Oh yeah, did we mention it's free? </p>
+          </div>
+        </article>
+
+        <div class="stores">
+          <img class="apple-store" src="images/badge-iphone.png" alt="Apple store logo">
+          <img class="google-store" src="images/badge-android.png" alt="Google store logo">
+        </div>
+
+      </section>
+
+    </div>
+
+  </main>
+
+  <footer>
+    <nav id="footer">
+      <ul class="blue-footer">About us</ul>
+      <ul class="blue-footer">Support</ul>
+      <ul class="blue-footer">Blog</ul>
+      <ul class="blue-footer">Press</ul>
+      <ul class="blue-footer">Api</ul>
+      <ul class="blue-footer">Jobs</ul>
+      <ul class="blue-footer">Privacy</ul>
+      <ul class="blue-footer">Terms</ul>
+      <ul class="grey-footer">&copy; 2014 Instagram</ul>
+    </nav>
+  </footer>
+
+</body>
+
 </html>
