add html, css and bug fixing

--- a/index.html
+++ b/index.html
@@ -1,16 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <section class="above">
+    <div>
+      <img src="./images/brand.png" alt="Instragram brand">
+      <button class="log-btn">
+        <img src="./images/home.png" alt="home picture">
+        <a href="log-in.css">Log in</a>
+      </button>
+    </div>
+
+  </section>
+
+  <section class="container down">
+
+    <div class="mobiles">
+      <img src="./images/phones.png" alt="mobiles">
+    </div>
+
+    <div class="text">
+      <img src="./images/frame.png" alt="frame">
+      <h2>Capture and Share the World's Moments</h2>
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+        life
+        with friends and family. <br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+        that easy. You can even
+        share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+        Oh yeah, did we mention it's
+        free?
+      </p>
+      <div class="badges">
+        <img src="./images/badge-iphone.png" alt="badge iphone">
+        <img src="./images/badge-android.png" alt="bagde android">
+      </div>
+    </div>
+
+  </section>
+
+</body>
+
+<footer class="container footer">
+  <ul>
+    <il>About Us</il>
+    <il>Support</il>
+    <il>Blog</il>
+    <il>Press</il>
+    <il>API</il>
+    <il>Jobs</il>
+    <il>Privacy Terms</il>
+    <il>&copy</il>
+    <il>2014 Instagram</il>
+  </ul>
+</footer>
+
 </html>
