--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <section class="above">
-    <div>
+    <div class="ig-log">
       <img src="./images/brand.png" alt="Instragram brand">
       <button class="log-btn">
         <img src="./images/home.png" alt="home picture">
@@ -56,9 +56,11 @@
     <il>Press</il>
     <il>API</il>
     <il>Jobs</il>
-    <il>Privacy Terms</il>
-    <il>&copy</il>
-    <il>2014 Instagram</il>
+    <il>Privacy</il>
+    <il>Terms</il>
+  </ul>
+  <ul class="copy">
+    <il> &copy 2014 Instagram</il>
   </ul>
 </footer>
 
