--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
         <div class="bottom">
           <h1>Capture and Share the World's Moments</h1>
-          <p>Instagram is a fast, beautiful and fun way to share your life with
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+            life with
             friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
             &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
