--- a/index.html
+++ b/index.html
@@ -21,51 +21,52 @@
       <div class="container-derecha">
 
         <div class="container-derecha-arriba">
-          <img src="./images/brand.png" alt="Brand logo">
+          <img src="./images/brand.png" alt="Brand logo" class="brand-logo">
 
-          <button>
-            <img src="./images/home.png" alt="Home button icon">
-            <p>Log in</p>
-          </button>
+          <a href=""> <img src="./images/home.png" alt="" class="boton"> Log in</a>
         </div>
 
 
-        <section>
+        <section class="fondo-blanco">
           <h1>Capture and Share the World's Moments</h1>
 
-          <p>Instagram is a fast, beautiful and fun way to share your life with
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share
+            your
+            life with
             friends and family.</p>
 
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the
             world.</p>
 
           <p>Oh yeah, did we mention it's free?</p>
 
         </section>
-
         <div class="links">
-          <img src="./images/badge-android.png" alt="">
+          <img src="./images/badge-android.png" alt="" class="badge-izq">
           <img src="./images/badge-iphone.png" alt="">
         </div>
       </div>
 
     </div>
 
-    <footer class="footer">
-      <ul>
-        <li>About Us</li>
-        <li>Support</li>
-        <li>Blog</li>
-        <li>Press</li>
-        <li>API</li>
-        <li>Jobs</li>
-        <li>Privacy</li>
-        <li>Terms</li>
-      </ul>
+  </div>
 
-      <p>&copy; 2014 Instagram</p>
-    </footer>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+
+    <p class="gray">&copy; 2014 Instagram</p>
+  </footer>
 
   </div>
 
