--- a/index.html
+++ b/index.html
@@ -4,13 +4,65 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/lab-css-instagram-clone/styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="side">
+      <img src="/lab-css-instagram-clone/images/phones.png" alt="Two phones" />
+    </div>
+
+    <div class="side">
+      <header>
+        <img
+          src="/lab-css-instagram-clone/images/brand.png"
+          alt="Instagram logo"
+        />
+        <a class="button" href="#"
+          ><img
+          class="margin"
+            src="/lab-css-instagram-clone/images/home.png"
+            alt="Log in button"
+          />
+         <span>Log in</span> </a
+        >
+      </header>
+      <article class="white">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>
+          Instagram is a <span>fast, beautiful</span> and <span>fun</span> way
+          to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img 
+        class="margin"
+          src="/lab-css-instagram-clone/images/badge-iphone.png"
+          alt="Download on the App Store"
+        />
+        <img
+        
+          src="/lab-css-instagram-clone/images/badge-android.png"
+          alt="Get it on Google Play"
+        />
+      </article>
+    </div>
+    <div class="bluebackground"></div>
+    <footer>
+      <nav>
+      <a href="#">About Us </a>
+      <a href="#">Support </a>
+      <a href="#">Blog </a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a class="gray" href="#">Terms &copy; 2014 Instagram</a>
+      </nav>
+    </footer>
   </body>
 </html>
